--- a/Backend/Booking/src/main/resources/application.properties
+++ b/Backend/Booking/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Booking
+server.port=8086
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/booking
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.hikari.initializationFailTimeout=0
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
