feat(booking): add AvailabilityEvent DTO and Kafka publishing for availability changes
- Introduced AvailabilityEvent DTO with fields for event type, id, accommodationId,
  start/end dates, price, priceType, and status
- Implemented sendAvailabilityEvent method to build event and publish it to
  'availability-events' Kafka topic
- Ensured serialization with ObjectMapper and error handling for JSON processing

--- a/Backend/Booking/build.gradle
+++ b/Backend/Booking/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     testImplementation 'com.h2database:h2'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 tasks.named('test') {
