--- a/Backend/Booking/src/main/resources/application.properties
+++ b/Backend/Booking/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.hikari.initializationFailTimeout=0
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
+accommodation.service.url=http://localhost:8085
+spring.kafka.bootstrap-servers=localhost:29092
+
+
