--- a/Backend/Booking/src/test/resources/application.properties
+++ b/Backend/Booking/src/test/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+accommodation.service.url=http://localhost:8085
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://dummy
+app.cors.allowed-origins=http://localhost:5173
