--- a/Backend/Booking/src/test/resources/application.properties
+++ b/Backend/Booking/src/test/resources/application.properties
@@ -2,8 +2,9 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
 
 accommodation.service.url=http://localhost:8085
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
