feat(notifications): add RequestRespondedEvent support
- Introduced RequestRespondedEvent DTO
- Published Kafka event on reservation request status updates
- Extended Kafka producer configuration to support RequestRespondedEvent serialization
- Integrated event emission in updateStatus flow

--- a/Backend/Booking/src/main/resources/application.properties
+++ b/Backend/Booking/src/main/resources/application.properties
@@ -17,3 +17,6 @@ accommodation.service.url=http://localhost:8085
 spring.kafka.bootstrap-servers=localhost:29092
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/IdentityRealm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/IdentityRealm/protocol/openid-connect/certs
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
