--- a/Backend/Booking/build.gradle
+++ b/Backend/Booking/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation "org.springframework.kafka:spring-kafka-test"
+
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
