test(integration): refactor ReservationRequestControllerIntegrationTest to use real DB & Kafka
- Replaced Mockito-based tests with real integration tests using Testcontainers (PostgreSQL + Kafka)
- Enabled full persistence layer checks via ReservationRequestRepository
- Added realistic JWT claims for host and guest roles
- Verified security boundaries (403/401) for unauthorized and forbidden access
- Verified DB state after create, update, cancel, delete operations
- Removed doThrow/when/verify calls in favor of actual persistence assertions

--- a/Backend/Booking/build.gradle
+++ b/Backend/Booking/build.gradle
@@ -34,12 +34,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     testImplementation "org.springframework.kafka:spring-kafka-test"
-
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
@@ -47,7 +44,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.testcontainers:junit-jupiter:1.19.7'
+    testImplementation 'org.testcontainers:postgresql:1.19.7'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.testcontainers:kafka'
     testImplementation 'com.h2database:h2'
+
+
 }
 
 tasks.named('test') {
