--- a/Backend/Booking/src/test/resources/application.properties
+++ b/Backend/Booking/src/test/resources/application.properties
@@ -1,11 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+# Onemogu?i security i eksterni servisi za test profile
+spring.main.allow-bean-definition-overriding=true
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 accommodation.service.url=http://localhost:8085
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://dummy
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://dummy
