--- a/Backend/Booking/src/main/resources/application.properties
+++ b/Backend/Booking/src/main/resources/application.properties
@@ -21,3 +21,23 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/real
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.environment=local
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+management.tracing.sampling.probability=1.0
+management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
+
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web=INFO
+logging.loki.enabled=true
+loki.url=http://localhost:3100
+
+management.info.env.enabled=true
+info.app.name=${spring.application.name}
+info.app.description=Accommodation Service
+info.app.version=@project.version@
